# machines-attoparsec

./: README.markdown  machines-attoparsec.cabal
examples/: LICENSE  Main.hs
src/Data/Machine/: Attoparsec.hs
test/: Spec.hs
