name:                machines-attoparsec
version:             0.1.0.0
synopsis:            Parsing combinator for incremental input using machines
-- description:
homepage:            github.com/statusfailed/machines-attoparsec
license:             MIT
license-file:        LICENSE
author:              Paul Wilson
maintainer:          sf@statusfailed.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >=1.10

extra-source-files:
  README.markdown
  examples/LICENSE
  examples/*.hs

library
  exposed-modules:     Data.Machine.Attoparsec
  -- other-modules:
  other-extensions:    GADTs, RankNTypes
  build-depends:
      base >= 4.7 && <5
    , machines
    , attoparsec
    , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -Werror -threaded
