name:                machines-attoparsec
version:             0.1.0.0
synopsis:            Parsing combinator for incremental input using machines
-- description:
homepage:            github.com/statusfailed/machines-attoparsec
license:             MIT
license-file:        LICENSE
author:              Paul Wilson
maintainer:          sf@statusfailed.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >=1.10

extra-source-files:
  README.markdown
  examples/LICENSE
  examples/*.hs

library
  exposed-modules:     Data.Machine.Attoparsec
  -- other-modules:
  other-extensions:    GADTs, RankNTypes
  build-depends:
      base >= 4.7 && <5
    , machines
    , attoparsec
    , bytestring
    , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -Werror -threaded

test-suite machines-attoparsec-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , tasty
    , tasty-hunit
    , text
    , bytestring
    , attoparsec
    , machines
    , machines-attoparsec
  default-language: Haskell2010
